--- a/Projeto-gamer/css/style.css
+++ b/Projeto-gamer/css/style.css
@@ -1,19 +1,8 @@
+/* imports das fontes */
 @font-face {
-    font-family: Titilium-web;
-    src: url(../assets/fonts/Titilium-web/TitilliumWeb-Black.ttf);
+    font-family: TitilliumWeb-Black;
+    src: url(ass);
 }
-
-@font-face {
-    font-family: Inter;
-    src: url(../assets/fonts/Inter/Inter-VariableFont_slnt\,wght.ttf);
-}
-
-@font-face {
-    font-family: Quicksand;
-    src: url(../assets/fonts/Quicksand/OFL.txt);
-}
-    
-
 
 * {
     margin: 0;
@@ -21,13 +10,69 @@
     box-sizing: border-box;
 }
 
-header {
-    background-color: gray;
+body {
+    background-color: #1B1426;
+    color: #ffffff;
 }
 
-/* MOBILE FIRST */
+/* Classes genéricas */
+.layout-grid {
+    /* border: 1px solid salmon; */
+    width: 90%;
+    height: 100%;
+    margin: 0 auto;
+}
+
+/* justify content + align items */
+.alinhamento-between-center {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/* Mobile First */
+
+/* HEADER */
+header {
+    height: 60px;
+    background-color: #1B1426;
+}
+
+/* Header Top */
+header .header-top {
+    display: none;
+}
+
+/* Header Bottom */
 
 
+header .header-bottom {
+    height: 100%;
+}
+
+header .header-bottom img.logo {
+    width: 86px;
+}
+
+header .header-bottom nav {
+    position: fixed;
+    top: 60px;
+    left: 0;
+    width: 80vw;
+    height: calc (100vh - 60px);
+    display: flex;
+    flex-direction: column;
+    background-color: gray;
+    border: 1px solid white;
+}
+
+header .header-bottom nav a {
+    padding: 20px;
+}
+
+header .header-bottom .menu-usuarios {
+    display: none;
+}
 
 
 
